@@ -1,3 +1,7 @@
+2001-05-05  Dave Peticolas  <dave@krondo.com>
+
+	* src/gnome/window-main.c: fix bugs
+
 2001-05-05  Christian Stimming  <stimming@tuhh.de>
 
 	* src/scm/report/price-scatter.scm: More experiments with scatter
